# robin-ai-observability

./: Makefile  README.md  docker-compose.yml  otel-collector-config.yaml  test.txt
data-store/: Dockerfile  models.py  pyproject.toml  schemas.py
data-store/alembic/versions/: 001_initial.py
docs/: implementation_summary.md
document-api/: Dockerfile  main.py  pyproject.toml  telemetry.py
test-api/: Dockerfile  README.md  test_api.py
